exports[`ArraySchema auto-converts plain arrays to ArraySchema 1`] = `
Object {
  "entities": Object {
    "user": Object {
      "1": Object {
        "id": 1,
      },
      "2": Object {
        "id": 2,
      },
    },
  },
  "result": Array [
    1,
    2,
  ],
}
`;

exports[`ArraySchema normalizes an array of objects 1`] = `
Object {
  "entities": Object {
    "item": Object {
      "1": Object {
        "id": 1,
      },
      "2": Object {
        "id": 2,
      },
    },
  },
  "result": Array [
    1,
    2,
  ],
}
`;

exports[`ArraySchema passes it parent to its children when normalizing 1`] = `
Object {
  "entities": Object {
    "children": Object {
      "4": Object {
        "content": "child",
        "id": 4,
        "parentId": 1,
        "parentKey": 0,
      },
    },
    "parents": Object {
      "1": Object {
        "children": Array [
          4,
        ],
        "content": "parent",
        "id": 1,
      },
    },
  },
  "result": 1,
}
`;
